fix(multiviewcalendar): view header misalignment

--- a/packages/material/scss/calendar/_variables.scss
+++ b/packages/material/scss/calendar/_variables.scss
@@ -101,7 +101,6 @@ $calendar-cell-selected-focus-shadow: $calendar-cell-focused-shadow !default;
 $multiviewcalendar-button-style: detached !default;
 $multiviewcalendar-button-size: 40px !default;
 $multiviewcalendar-gap: ($calendar-infinite-content-padding-x * 2) !default;
-$multiviewcalendar-content-padding-x: ($multiviewcalendar-gap / 2) !default;
 $multiviewcalendar-content-padding-y: 0px !default;
 $multiviewcalendar-navigation-margin-x: 0px !default;
 $multiviewcalendar-navigation-margin-y: calc( #{$calendar-header-padding-y * 2} + #{$calendar-header-height} + #{$button-border-width * 2} ) !default;
